--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         dataBinding = true
     }
     defaultConfig {
-        applicationId "com.vjezba.androidjetpacknews"
+        applicationId "com.vjezba.androidjetpackmovie"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
@@ -132,6 +132,9 @@ dependencies {
 
     // convert Observables (or Flowables) into LiveData objects
     implementation "android.arch.lifecycle:reactivestreams:1.1.1"
+
+    //EventBus
+    implementation 'org.greenrobot:eventbus:3.1.1'
 
 }
 
