--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.vjezba.androidjetpacknews">
+    package="com.vjezba.androidjetpackmovie">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
-        android:name="com.vjezba.androidjetpacknews.App"
+        android:name="com.vjezba.androidjetpackmovie.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Github">
         <activity
-            android:name="com.vjezba.androidjetpacknews.ui.activities.NewsActivity" >
+            android:name="com.vjezba.androidjetpackmovie.ui.activities.MoviesActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.vjezba.androidjetpacknews.ui.activities.NewsDetailsActivity" />
+            android:name="com.vjezba.androidjetpackmovie.ui.activities.MoviesDetailsActivity" />
     </application>
 
 </manifest>
