--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
             android:name="com.vjezba.androidjetpackmovie.ui.activities.MoviesDetailsActivity" />
         <activity
             android:name="com.vjezba.androidjetpackmovie.ui.activities.TrailersActivity" />
+        <activity
+            android:name="com.vjezba.androidjetpackmovie.ui.activities.ActorsActivity" />
     </application>
 
 </manifest>
